--- a/src/main/resources/static/css/add.css
+++ b/src/main/resources/static/css/add.css
@@ -123,3 +123,10 @@ ul li {
 .button1 {
 margin-left: 20%;
 }
+
+.t{
+    margin-left:39%;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    font-weight:400;
+}
